[project]
name = "radextract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts",
    "polars",
    "ipykernel",
    "ipywidgets",
    "marimo>=0.16.5",
    "mcp[cli]>=1.16.0",
    "dspy>=3.0.3",
    "python-dotenv>=1.1.1",
    "pandas>=2.3.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-text-splitters>=0.3.11",
    "llama-index>=0.12.52",
    "langextract>=1.0.9",
    "jupyter-ai[all]>=2.31.6",
    "jupyterlab>=4.4.10",
    "radgraph>=0.1.18",
    "textualize>=0.1",
    "textual>=6.6.0",
    "rich>=14.2.0",
    "neo4j>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[project.scripts]
radex = "radextract:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.4",
]
